--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.20.11",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
+    "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
