firebase analytics added

--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
 NODE_PATH=src/
 REACT_APP_API_KEY=0ac33ffcad3146778e684623210905
+
+REACT_APP_FIREBASE_API_KEY=AIzaSyCiYGJeJdw-V2YEztF9Cf9V8s0F14bgDJs
+REACT_APP_AUTH_DOMAIN =react-wheather.firebaseapp.com
+REACT_APP_PROJECT_ID =react-wheather
+REACT_APP_STORAGE_BUCKET= react-wheather.appspot.com
+REACT_APP_MESSAGING_SENDER_ID=402441623508
+REACT_APP_APP_ID=1:402441623508:web:080a5367c0b6e94b266841
+REACT_APP_MEASUREMENT_ID = G-DXLQ595HYV
