--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "@types/node": "^12.20.11",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
+    "@types/react-places-autocomplete": "^7.2.6",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "firebase": "^8.6.0",
+    "framer-motion": "^4.1.16",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
+    "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
+    "react-places-autocomplete": "^7.3.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
